# FastAPI-OTP-Auth-Backend

./: .gitignore  README.md  config.py  dump.rdb  main.py  pyproject.toml
app/: config.py  main.py
app/background/: OtpService.py
app/dependencies/: User.py
app/schemas/: Token.py
authentication/: services.py
background/: OtpService.py  celery_app.py
models/: User.py
schemas/: Otp.py  User.py
